<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:padding="16dp"
                android:layout_height="wrap_content"
                tools:context=".fragment.SegitigaFragment">

            <TextView
                    android:text="@string/alas"
                    android:textSize="18sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView" app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:hint="@string/masukkan_alas"
                    android:ems="10"
                    android:id="@+id/ed_alas"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"/>
            <TextView
                    android:text="@string/tinggi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    android:textSize="18sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/ed_alas" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/masukkan_tinggi"
                    android:ems="10"
                    android:id="@+id/ed_tinggi"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"/>
            <Button
                    android:text="@string/hitung"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_hitung"
                    app:layout_constraintTop_toBottomOf="@+id/ed_tinggi" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="24dp"/>

            <View android:layout_width="1dp" android:layout_height="200dp" app:layout_constraintTop_toBottomOf="@+id/btn_hitung"
                  app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                  app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                  android:layout_marginTop="32dp" android:id="@+id/view2"/>
            <TextView
                    android:text="@string/luas"
                    android:textSize="18sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_luas" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="@+id/view2" app:layout_constraintEnd_toStartOf="@+id/view2"
                    android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"/>
            <TextView
                    tools:text="0"
                    android:textSize="50sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textStyle="bold"
                    android:visibility="gone"
                    tools:visibility="visible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_result_luas" app:layout_constraintEnd_toStartOf="@+id/view2" android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/view2" app:layout_constraintTop_toTopOf="@+id/view2"/>
            <TextView
                    android:text="@string/keliling"
                    android:textSize="18sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_keliling" app:layout_constraintStart_toEndOf="@+id/view2"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/view2"/>
            <TextView
                    tools:text="0"
                    android:textSize="50sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textStyle="bold"
                    android:visibility="gone"
                    tools:visibility="visible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_result_keliling" app:layout_constraintStart_toEndOf="@+id/view2"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/view2" app:layout_constraintTop_toTopOf="@+id/view2"/>
            <Button
                    android:text="@string/share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_share" android:layout_marginBottom="32dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view2" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="32dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>